--- a/resume/index.njk
+++ b/resume/index.njk
@@ -24,7 +24,7 @@ title: lexically::scoped | resume
     .resume__container__item {
         margin-bottom: 20px;
     }
-    
+
     .resume__container__item__row {
         font-size: 1rem;
     }
@@ -173,10 +173,10 @@ title: lexically::scoped | resume
                                 Enhanced the Emerald POS test suite with 7 automated test scripts written in C# using Selenium
                             </li>
                             <li>
-                                Reduced the running time of the test suite by 75% by optimizing the existing codebase  
+                                Reduced the running time of the test suite by 75% by optimizing the existing codebase
                             </li>
                             <li>
-                                Worked with a global team to certify the Emerald POS product release for Northgate                            
+                                Worked with a global team to certify the Emerald POS product release for Northgate
                             </li>
                             <li>
                                 Installed and configured 3 VMs on servers located in Waterloo to enhance team productivity
@@ -189,7 +189,7 @@ title: lexically::scoped | resume
                         <span>
                             <strong>Undergraduate Teaching Assistant</strong>
                             <span class="small">
-                                Georgia Institute of Technology 
+                                Georgia Institute of Technology
                             </span>
                         </span>
                         <span class="small muted">
@@ -197,7 +197,6 @@ title: lexically::scoped | resume
                         </span>
                     </div>
                     <div class="resume__container__item__row">
-                        <span> Courses </span>
                         <ul>
                             <li>CS 3210: Design of Operating Systems (Current)</li>
                             <li>CS 2110: Computer Organization and Architecture</li>
@@ -214,33 +213,14 @@ title: lexically::scoped | resume
             <div class="resume__container">
                 <div class="resume__container__item">
                     <div class="resume__container__item__row">
-                        You can find my personal projects on <a href="{{ me.socials.github }}">github</a>
-                        <br>
-                        <br>
-                        <strong><em>Open source contributions</em></strong> 
-                        <ul>
-                            <li>
-                                <a href="https://github.com/nushell/nushell">nushell</a>: A new kind of shell implemented in Rust
-                                <ul>
-                                    <li>Implemented the <code>start</code> command which lets users open files and applications using the system default</li>
-                                    <li>Added a <code>--save</code> flag to the <code>alias</code> command, allowing users to save aliases to the startup file on the go</li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="https://github.com/romefrontend/rome">romejs</a>: An experimental JavaScript toolchain
-                                <ul>
-                                    <li>Added a lint that checks for empty and infinite matches in a regex expression</li>
-                                    <li>Implemented a command that generates shell autocompletion scripts for fish and bash</li>
-                                </ul>
-                            </li>
-                        </ul>
+                        You can find my personal projects on <a href="{{ me.socials.github }}">github</a>. I enjoy working on open-source projects and contribute patches when I can. Notable projects include PyTorch, GHC, nushell, and romejs.
                     </div>
                 </div>
             </div>
         </section>
 
         <section>
-            <h2>Extracurriculars</h2>
+            <h2>Involvements</h2>
             <div class="resume__container">
                 <div class="resume__container__item">
                     <div class="resume__container__item__row--header">
