--- a/_includes/styles/nav.css
+++ b/_includes/styles/nav.css
@@ -1,19 +1,21 @@
 .nav {
-    font-family: var(--font); 
+    font-family: var(--font);
+    width: 100%;
 }
 
 .nav__list {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
+    flex-wrap: wrap;
     list-style-type: none;
-    padding: 0px;
+    padding: 15px 0px;
     margin: 0px;
 }
 
 .nav__list__item {
-    padding: 20px 0px;
-    margin-left: 25px;
+    padding: 5px;
+    margin-right: 15px;
 }
 
 .nav__list__item a {
