--- a/blog/index.njk
+++ b/blog/index.njk
@@ -1,10 +1,10 @@
 ---
 layout: layouts/main.njk
-title: lexically::scoped | blog 
+title: lexically::scoped | blog
 ---
 
 <div class="content">
-    <h2><span style="padding-right: 10px;">🎯</span> lexically :: scoped</h2>
+    <h2>lexically :: scoped</h2>
     <div>
         {%- for post in collections.posts | reverse -%}
         <div class="post">
