--- a/index.njk
+++ b/index.njk
@@ -6,15 +6,12 @@ gatech:
     main: https://hexlabs.org
     horizons: https://www.horizons.hack.gt/
     horizonsProjects: https://horizons.hack.gt/
-work:
-  ncr: https://www.ncr.com
-  github: https://www.github.com/
 title: lexically::scoped | Elton Pinto
 description: My personal website and blog!
 ---
 
 <div class="splash">
-    <h1 class="splash__title">{% emoji "👋" %} Hi, I'm Elton</h1>
+    <h1 class="splash__title">Hi, I'm Elton</h1>
 </div>
 <div class="content">
     <section>
@@ -22,35 +19,59 @@ description: My personal website and blog!
             I'm an undergrad studying Computer Science at <a href="{{ gatech.main }}" target="_blank">Georgia Tech</a>. My interests include compilers, programming languages, quantum computing, and operating systems.
         </p>
 
-        <p> I enjoy hacking on open source projects, speed cubing, and reading. </p>
-
         <h3>Research</h3>
         <p> I'm part of the <a href="http://prod.tinker.cc.gatech.edu/" target="_blank">TINKER lab</a> at Georgia Tech. My research revolves around Grover oracle implementations and synthesis. I'm advised by <a href="https://www.scs.gatech.edu/people/thomas-conte" target="_blank">Dr. Thomas Conte</a> and <a href="https://www.cc.gatech.edu/people/jeffrey-young" target="_blank">Dr. Jeff Young</a>.</p>
-        
 
         <h3>Experience</h3>
-        I've interned on the PyTorch Dev Infra team at Facebook and the Innovation Lab at NCR. My <a href="/resume">resume</a> has more details.
+        I've interned on the PyTorch Dev Infra team at Meta and the Innovation Lab at NCR. My <a href="/resume">resume</a> has more details.
 
         <h3>Involvements</h3>
 
-
-        <p> I founded <a href="https://dtyped.netlify.app" target="_blank">dependently-typed</a>, a programming languages and compilers club at Georgia Tech. I am currently the co-director of <a href="{{ gatech.hackgt.main }}" target="_blank">Hexlabs</a> (formerly known as HackGT).
-            I was an event lead for <a href="{{ gatech.hackgt.horizons }}" target="_blank">Horizons</a>, an arts + tech hackathon that attracted over 300 hackers who made some really artsy projects.
-        </p>
-
-      <p> I'm a teaching assistant for <a href="https://github.gatech.edu/pages/cs3210-fall2021/course/" target="_blank">CS 3210</a> (Design of Operating Systems).<p>
+        <ul>
+            <li>
+                <a href="{{ gatech.dtyped.main }}" target="_blank">dependently-typed</a>:
+                Founder and President
+                <small class="muted">(August 2021 to present)</small>
+            </li>
+            <li>
+                <a href="{{ gatech.hackgt.main }}" target="_blank">HexLabs</a>:
+                <ul>
+                    <li>Co-director
+                        <small class="muted">(November 2020 to November 2021)</small>
+                    </li>
+                    <li>
+                        <a href="{{ gatech.hackgt.horizons }}" target="_blank">Horizons</a> event-lead
+                        <small class="muted">(January 2020 to March 2020)</small>
+                    </li>
+                    <li>
+                        <a href="{{ gatech.hackgt.catalyst }}" target="_blank">Catalyst</a> mentor
+                        <small class="muted">(March 2019)</small>
+                    </li>
+                    <li>Tech team member
+                        <small class="muted">(December 2018 to November 2021)</small>
+                    </li>
+                </ul>
+            </li>
+            <li> Teaching assistantship:
+                 <ul>
+                    <li>CS 3210: Design of Operating Systems <small class="muted">(January 2021 to present)</small></li>
+                    <li>CS 2110: Computer Organization and Programming <small class="muted">(January 2020 to December 2020)</small></li>
+                    <li>CS 1301: Intro to Computing <small class="muted">(August 2019 to December 2019)</small></li>
+                 </ul>
+            </li>
+        </ul>
 
         <p>
-            You can find my projects on <a href="{{ work.github }}" target="_blank">github</a>. I sometimes write on my <a href="/blog">blog</a>.
+            You can find my projects on <a href="{{ me.socials.github.url }}" target="_blank">GitHub</a>.
         </p>
     </section>
 
     <section>
-        <h2>{% emoji "📜" %} Recent posts </h2>
+        <h2> Recent posts </h2>
         <ul>
             {%- for post in collections.posts | reverse -%}
                 <li>
-                    <a href="{{ post.url }}">{{ post.data.title | safe }}</a> 
+                    <a href="{{ post.url }}">{{ post.data.title | safe }}</a>
                     <small class="muted">{{ post.data.date | readableDate }}</small>
                 </li>
             {%- endfor -%}
@@ -58,22 +79,22 @@ description: My personal website and blog!
     </section>
 
     <section>
-        <h2>{% emoji "📣" %} Talks </h2>
+        <h2> Talks </h2>
         <ul>
             {%- for talk in talks | reverse -%}
                 <li>
                     {{ talk.name }} <small class="muted">{{ talk.date | toDateObj | readableDate }}</small>
                     <br>
                     <small>
-                        📍 {{ talk.event }}<br>
+                         {{ talk.event }}<br>
                         {% if talk.slides %}
-                            <a href="{{ talk.slides }}">📈 slides</a>
+                            <a href="{{ talk.slides }}"> slides</a>
                         {% endif %}
                         {% if talk.slides and talk.video %}
                             |
                         {% endif %}
                         {% if talk.video %}
-                            <a href="{{ talk.video }}">📹 video</a>
+                            <a href="{{ talk.video }}"> video</a>
                         {% endif %}
                     </small>
                 </li>
