--- a/_includes/styles/highlight.css
+++ b/_includes/styles/highlight.css
@@ -2,9 +2,9 @@
 pre[class*="language-"],
 code[class*="language-"] {
 	color: #d4d4d4;
-	font-size: 16px;
 	text-shadow: none;
-	font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+        font-size: 0.9rem;
+	font-family: monospace;
 	direction: ltr;
 	text-align: left;
 	white-space: pre;
@@ -18,7 +18,6 @@ code[class*="language-"] {
 	-moz-hyphens: none;
 	-ms-hyphens: none;
 	hyphens: none;
-    border-radius: 10px;
 }
 
 pre[class*="language-"]::selection,
@@ -38,7 +37,6 @@ pre[class*="language-"] {
 	padding: 1em;
 	margin: .5em 0;
 	overflow: auto;
-	background: #252525;
 }
 
 :not(pre) > code[class*="language-"] {
@@ -90,7 +88,6 @@ pre[class*="language-"] {
 .language-css .token.string,
 .style .token.string {
 	color: #d4d4d4;
-	background: #1e1e1e;
 }
 
 .token.atrule,
@@ -215,4 +212,4 @@ pre[class*="language-"] > code[class*="language-"] {
 	pointer-events: none;
 	line-height: inherit;
 	white-space: pre;
-}
+
