--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -14,12 +14,10 @@
         <meta property="twitter:card" content="summary_large_image">
         <meta property="twitter:url" content="https://eltonpinto.me/">
         <meta property="twitter:title" content="lexically::scoped | Elton Pinto">
-        <meta property="twitter:description" content="My personal website and blog!">
+        <meta property="twitter:description" content="My personal website and blog">
         <meta property="twitter:image" content="{{ me.website.url }}/assets/preview.png">
 
         <link rel="icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/237/direct-hit_1f3af.png">
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 
         <script>
             MathJax = {
