--- a/index.njk
+++ b/index.njk
@@ -4,8 +4,10 @@ gatech:
   main: https://gatech.edu/
   hackgt:
     main: https://hexlabs.org
-    horizons: https://www.horizons.hack.gt/
-    horizonsProjects: https://horizons.hack.gt/
+    horizons: https://horizons.hack.gt/
+    catalyst: https://catalyst.hack.gt
+  dtyped:
+    main: https://dtyped.netlify.app
 title: lexically::scoped | Elton Pinto
 description: My personal website and blog!
 ---
