--- a/index.njk
+++ b/index.njk
@@ -90,9 +90,24 @@ description: My personal website and blog!
         <h2> Publications </h2>
         <ul>
             <li>
-	            Austin Adams, Elton Pinto, Jeffrey Young, Creston Herold, Eugene Dumitrescu, and Thomas M. Conte.
-	            "Enabling a Programming Environment for an Experimental Ion Trap Quantum Testbed."
-	            <em>2021 International Conference on Rebooting Computing (ICRC 2021)</em>
+                <b><a href="https://github.com/1ntEgr8/qvmp/blob/main/paper/thesis.pdf">
+                  An Implementation of the Quantum Verification of Matrix Products Algorithm
+                </a></b>
+                <br>
+	            Elton Pinto.
+                <br>
+	            Undergraduate Thesis. Georgia Institute of Technology, TINKER Lab, May 2022.
+            </li>
+            <li>
+	            <b><a href="https://doi.org/10.1109/ICRC53822.2021.00014">
+                  Enabling a Programming Environment for an Experimental Ion Trap Quantum Testbed
+                </a></b>
+                <br>
+	            Austin Adams, Elton Pinto, Jeffrey Young, Creston Herold, Eugene Dumitrescu, and Thomas Conte.
+                <br>
+	            <a href="https://ieeexplore.ieee.org/xpl/conhome/9743142/proceeding">
+                2021 International Conference on Rebooting Computing (ICRC 2021)
+                </a>
             </li>
         </ul>
     </section>
