Update main page

--- a/index.njk
+++ b/index.njk
@@ -22,7 +22,7 @@ description: My personal website and blog!
         </p>
 
         <h3>Research</h3>
-        <p> I'm part of the <a href="http://prod.tinker.cc.gatech.edu/" target="_blank">TINKER lab</a> at Georgia Tech. My research revolves around Grover oracle implementations and synthesis. I'm advised by <a href="https://www.scs.gatech.edu/people/thomas-conte" target="_blank">Dr. Thomas Conte</a> and <a href="https://www.cc.gatech.edu/people/jeffrey-young" target="_blank">Dr. Jeff Young</a>.</p>
+        <p> I'm part of the <a href="http://prod.tinker.cc.gatech.edu/" target="_blank">TINKER lab</a> at Georgia Tech. My research revolves around Grover oracle implementation and synthesis. I'm advised by <a href="https://www.scs.gatech.edu/people/thomas-conte" target="_blank">Dr. Thomas Conte</a> and <a href="https://www.cc.gatech.edu/people/jeffrey-young" target="_blank">Dr. Jeff Young</a>.</p>
 
         <small><a href="#publications">View publications</a></small>
 
@@ -42,7 +42,7 @@ description: My personal website and blog!
                 <small class="muted">(August 2021 to present)</small>
             </li>
             <li>
-                <a href="{{ gatech.hackgt.main }}" target="_blank">HexLabs</a>:
+                <a href="{{ gatech.hackgt.main }}" target="_blank">HexLabs</a>(formerly HackGT):
                 <ul>
                     <li>Co-director
                         <small class="muted">(November 2020 to November 2021)</small>
